<resources>
    <string name="app_name">GamerWatch</string>
    <string name="addToWishlist">Add game to wishlist</string>
    <string name="placeholder">Game title goes here!</string>
    <string name="pc">PC</string>
    <string name="ps4">PS4</string>
    <string name="xbox1">XBONE</string>
    <string name="featured_games">Featured Games</string>
    <string name="featured">Featured</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="search_games">Search Games</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Video Games</string>
</resources>
