<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/gameTitleLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/gameImage"
            android:layout_marginRight="21dp"
            android:layout_marginEnd="21dp"
            android:layout_below="@+id/gameTitle"
            android:layout_alignRight="@+id/gameTitle"
            android:layout_alignEnd="@+id/gameTitle" />

        <TextView
            android:text="@string/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gameTitle"
            android:textAllCaps="true"
            android:ellipsize="none"
            android:layout_marginTop="15dp"
            android:textSize="24sp"
            android:layout_alignParentTop="true" />

    </LinearLayout>


    <Button
        android:text="@string/addToWishlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addToWishlist"
        android:layout_marginBottom="104dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameTitleLayout"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp">
            <RadioButton
                android:text="@string/pc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pc_button"
                android:layout_weight="1" />
            <RadioButton
                android:text="@string/ps4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ps4_button"
                android:layout_weight="1" />
            <RadioButton
                android:text="@string/xbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/xbox1_button"
                android:layout_weight="1" />

        </RadioGroup>


</RelativeLayout>